--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -1,15 +1,92 @@
 #burst {
   margin: 0 0 0 -20px;
+  font-size: 14px;
+  /* field styles */
+  /* tooltip styles */
 }
 #burst #burst-header {
   padding: 20px;
   background-color: #fff;
 }
 #burst #burst-header img {
-  margin-left: 15px;
   width: 120px;
 }
 #burst #burst-content-area {
   margin: 15px;
 }
-/*# sourceMappingURL=admin.css.map */
+#burst h3 {
+  margin-top: 30px;
+  margin-bottom: 10px;
+}
+#burst .field-group .burst-label {
+  vertical-align: top;
+  text-align: left;
+  margin: 10px 10px 10px 0;
+  line-height: 1.3;
+  font-weight: 600;
+  color: #23282d;
+  text-shadow: none;
+}
+#burst .field-group .burst-field {
+  margin-bottom: 15px;
+}
+#burst .field-group .burst-field input[type="text"] {
+  width: 100%;
+}
+#burst .field-group.first .burst-label {
+  padding-top: 0;
+}
+#burst .burst-tooltip {
+  font-weight: 400;
+  font-size: 13px;
+  position: relative;
+  /* making the .tooltip span a container for the tooltip text */
+  margin-left: 5px;
+}
+#burst .burst-tooltip:before {
+  content: attr(data-text);
+  /* here's the magic */
+  position: absolute;
+  /* vertically center */
+  top: 50%;
+  transform: translateY(-50%);
+  /* move to right */
+  left: 100%;
+  margin-left: 15px;
+  /* and add a small left margin */
+  /* basic styles */
+  width: 600px;
+  padding: 10px;
+  border-radius: 10px;
+  background: #252525;
+  color: #fff;
+  text-align: center;
+  display: none;
+  transition: 0.3s opacity;
+}
+#burst .burst-tooltip:hover:before,
+#burst .burst-tooltip:hover:after {
+  display: flex;
+}
+#burst .burst-tooltip.left:before {
+  /* reset defaults */
+  left: initial;
+  margin: initial;
+  /* set new values */
+  right: 100%;
+  margin-right: 15px;
+}
+#burst .burst-tooltip::after {
+  content: "";
+  position: absolute;
+  /* position tooltip correctly */
+  left: 100%;
+  margin-left: -5px;
+  /* vertically center */
+  top: 50%;
+  transform: translateY(-50%);
+  /* the arrow */
+  border: 10px solid #000;
+  border-color: transparent black transparent transparent;
+  display: none;
+}
