--- a/assets/css/admin.less
+++ b/assets/css/admin.less
@@ -1,17 +1,114 @@
+@small-margin: 10px;
 @default-margin: 15px;
 @default-padding: 20px;
-#burst {
-  margin:0 0 0 -20px;
-  #burst-header {
-	img {
-	  margin-left:@default-margin;
-	  width: 120px;
-	}
-	padding: @default-padding;
-	background-color: #fff;
-  }
+@big-margin: 30px;
+@brand-primary: #29b6f6;
+@brand-secondary: #61ce70;
+@border-radius: 25px;
+@input-background-color: #F1F1F1;
+@input-border-color: #dadada;
+@gray: #c6c6c6;
+@default-font-size: 14px;
 
-  #burst-content-area {
-	margin: @default-margin;
-  }
+#burst {
+	margin:0 0 0 -20px;
+	font-size: @default-font-size;
+	#burst-header {
+	 	padding: @default-padding;
+		background-color: #fff;
+		img {
+			width: 120px;
+		}
+			
+	}
+	#burst-content-area {
+		margin: @default-margin;
+  	}
+  	h3{
+  		margin-top: @big-margin;
+  		margin-bottom: @small-margin;
+  	}
+	/* field styles */  	
+  	.field-group{
+  		.burst-label{
+  			vertical-align: top;
+			text-align: left;
+			margin: @small-margin @small-margin @small-margin 0;
+			line-height: 1.3;
+			font-weight: 600;
+			color: #23282d;
+			text-shadow: none;
+  		}
+  		.burst-field{
+  			margin-bottom: @default-margin;
+  			input[type="text"]{
+  				width: 100%;
+  			}
+  		}
+  		&.first .burst-label{
+  			padding-top: 0;
+  		}
+  	}
+
+  	/* tooltip styles */  	
+	.burst-tooltip{
+		font-weight: 400;
+		font-size: 13px;
+	  	position:relative; /* making the .tooltip span a container for the tooltip text */
+	  	margin-left: 5px;
+	  	&:before {
+			content: attr(data-text); /* here's the magic */
+			position:absolute;
+
+			/* vertically center */
+			top:50%;
+			transform:translateY(-50%);
+
+			/* move to right */
+			left:100%;
+			margin-left:15px; /* and add a small left margin */
+
+			/* basic styles */
+			width:600px;
+			padding:10px;
+			border-radius:10px;
+			background: #252525;
+			color: #fff;
+			text-align:center;
+
+			display: none;
+			//opacity:0;
+  			transition:.3s opacity;   
+		}
+		&:hover:before, &:hover:after {
+			display: flex;
+		}
+		&.left:before {
+			/* reset defaults */
+			left:initial;
+			margin:initial;
+
+			/* set new values */
+			right:100%;
+			margin-right:15px;
+		}
+		&::after {
+			content: "";
+			position:absolute;
+
+			/* position tooltip correctly */
+			left:100%;
+			margin-left:-5px;
+
+			/* vertically center */
+			top:50%;
+			transform:translateY(-50%);
+
+			/* the arrow */
+			border:10px solid #000;
+			border-color: transparent black transparent transparent;
+
+			display:none;
+		}
+	}
 }
