--- a/grid/css/muuri.less
+++ b/grid/css/muuri.less
@@ -1,20 +1,128 @@
-@gridblock_height: 500px;
-@gridblock_width: 800px;
-@gridblock_width_small:400px;
+@gridblock_height: 50vh;
+@gridblock_width: 50%;
+@gridblock_width_small: 25%;
 @grid_margin:10px;
 @grey-light:#cecece;
 @box_shadow_color: #dedede;
 
+
+// .burst-grid {
+//   position: relative;
+//     .burst-grid {
+//         width: calc(@gridblock_width - 20px); 
+//         padding: 10px;
+//         &.small {
+//             width: calc(@gridblock_width_small - 20px); 
+//         }
+//         .muuri-item {
+//           display: block;
+//           position: absolute;
+//           // width: 100px;
+//           // height: 100px;
+//           margin: 5px;
+//           z-index: 1;
+//           background: #fff;
+//         }
+//         .muuri-item.muuri-item-dragging {
+//           z-index: 3;
+//         }
+//         .muuri-item.muuri-item-releasing {
+//           z-index: 2;
+//         }
+//         .muuri-item.muuri-item-hidden {
+//           z-index: 0;
+//         }
+
+//         .burst-grid-header {
+//             border-bottom: 1px solid @grey-light;
+//             padding: 0;
+//             height: 60px;
+
+//             .burst-grid-header-container {
+//                 margin: 0 20px;
+//                 height: 100%;
+//             }
+//             .burst-grid-title{
+//                 cursor: pointer;
+//                 font-size: 20px;
+//                 padding: 20px 0;
+//                 font-weight: bold;
+//                 float: left;
+//             }
+//             .burst-grid-controls {
+//                 float: right;
+//                 margin-top: 20px;
+//                 color: #cecece;
+//             }
+//         }
+
+//         .item-container {
+//             background-color: #fff;
+//             position: relative;
+//             box-shadow: 1px 1px @box_shadow_color;
+            
+//             .item-content {
+//                 position: relative;
+//                 width: 100%;
+//                 height: 100%;
+//                 clear:both;
+//                 margin:15px;
+//                 height: calc(100% - 100px);
+//                 padding-top: 0px;
+//                 padding-bottom:10px;
+//             }
+//         }
+
+        
+//         &.half-height {
+//             .item-container {
+//                 //min-height: @gridblock_height / 2;
+//             }
+//         }
+//         &.small {
+//             .item-container {
+//                 //min-width: @gridblock_width_small - 2* @grid_margin;
+//             }
+//         }
+//         &.no-border {
+//             .item-container {
+//                 border: none;
+//             }
+//         }
+//         &.no-background {
+//             .item-container {
+//                 background-color: #F1F1F1;
+//             }
+//         }
+
+//         &.muuri-item-placeholder .item-container {
+//             border-style: dashed;
+//             padding:0;
+//         }
+//     }
+        
+//     .upsell-grid-container {
+//         .item-container {
+//                 box-shadow: none;
+//         }
+//     }
+// }
+
+
+
 .burst-grid {
     position: relative;
     .burst-grid {
-        width: @gridblock_width;
-        &.small {
-            width: @gridblock_width_small;
-        }
+        width: calc(@gridblock_width - 20px); 
+        padding: 10px;
         position: absolute;
         height: @gridblock_height;
+        min-height: 500px;
         z-index: 1;
+
+        &.small {
+            width: calc(@gridblock_width_small - 20px);
+        }
 
         &.muuri-item-hidden {
             z-index: 0;
@@ -26,15 +134,17 @@
             z-index: 3;
         }
         .burst-grid-header {
-		  border-bottom: 1px solid @grey-light;
-		  .burst-grid-header-container {
-                margin:0 20px;
-                height:100%;
-            }
-            cursor: pointer;
+    		border-bottom: 1px solid @grey-light;
             padding: 0;
-            height:60px;
+            height: 60px;
+		   .burst-grid-header-container {
+                margin: 0 20px;
+                height: 100%;
+            }
+            
+           
             .burst-grid-title{
+                cursor: pointer;
                 font-size: 20px;
                 padding: 20px 0;
                 font-weight: bold;
@@ -50,8 +160,8 @@
             background-color: #fff;
             position: relative;
             box-shadow: 1px 1px @box_shadow_color;
-            width: @gridblock_width - 2* @grid_margin;
-            height: @gridblock_height - 2 * @grid_margin;
+            height: 100%;
+            
             .item-content {
                 clear:both;
                 margin:15px;
@@ -62,13 +172,16 @@
 
         }
         &.half-height {
+                height: @gridblock_height / 2;
+                min-height: 250px;
             .item-container {
                 height: @gridblock_height / 2;
+                min-height: 250px;
             }
         }
         &.small {
             .item-container {
-                width: @gridblock_width_small - 2* @grid_margin;
+                min-width: @gridblock_width_small - 2* @grid_margin;
             }
         }
         &.no-border {
@@ -80,13 +193,6 @@
             .item-container {
                 background-color: #F1F1F1;
             }
-        }
-        &.muuri-item-dragging .item-content {
-        }
-        &.muuri-item-releasing .item-content {
-        }
-
-        &.muuri-item-placeholder {
         }
 
         &.muuri-item-placeholder .item-container {
