--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -3,6 +3,22 @@
   font-size: 14px;
   /* field styles */
   /* tooltip styles */
+  /*
+	Animated skeleton screen using CSS.
+
+	Create shapes using gradients that simulate solids.
+
+	Use `:empty` pseduo-class to show skeleton screen background only while container has no content (ex: for the "loading" state). When content is added to the container element, the pseudo-class selector won't match anymore and the skeleton screen will be removed automatically; no need to toggle a separate class on the container.
+
+	See: https://developer.mozilla.org/en-US/docs/Web/CSS/:empty
+
+	Animating one layer of the background which is a tilted linear gradient with white in the middle to achieve shine effect.
+	*/
+  /* Notices */
+  /*
+    Tips and Tricks
+   */
+  /*Tooltips on dashboard/settings page*/
 }
 #burst #burst-header {
   padding: 20px;
@@ -89,4 +105,167 @@
   border: 10px solid #000;
   border-color: transparent black transparent transparent;
   display: none;
+}
+#burst .upsell-grid-container .rsp-logo img {
+  height: 30px;
+}
+#burst .upsell-grid-container .burst-upsell {
+  display: flex !important;
+  flex-direction: row;
+  padding: 6px;
+  align-items: center;
+  color: #3c3c3c;
+}
+#burst .upsell-grid-container .burst-upsell .rsssl-yellow {
+  background-color: #EFBF4B;
+}
+#burst .upsell-grid-container .burst-upsell .cmplz-blue {
+  background-color: #27ADEA;
+}
+#burst .upsell-grid-container .burst-upsell .zip-pink {
+  background-color: #E366A1;
+}
+#burst .upsell-grid-container .burst-upsell .plugin-status {
+  margin-left: auto;
+}
+#burst .burst-skeleton:empty {
+  width: 350px;
+  height: 400px;
+  /* change height to see repeat-y behavior */
+  background-image: linear-gradient(100deg, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.3) 50%, rgba(255, 255, 255, 0) 80%), linear-gradient(#dadada 20px, transparent 0), linear-gradient(#dadada 20px, transparent 0), linear-gradient(#dadada 20px, transparent 0), linear-gradient(#dadada 20px, transparent 0);
+  background-repeat: repeat-y;
+  background-size: 50px 160px, /* highlight */ 150px 160px, 350px 160px, 300px 160px, 250px 160px;
+  background-position: 0 0, /* highlight */ 0px 0, 0px 40px, 0px 80px, 0px 120px;
+  animation: shine 1s infinite;
+}
+@keyframes shine {
+  to {
+    background-position: 100% 0, /* move highlight to right */ 0px 0, 0px 40px, 0px 80px, 0px 120px;
+  }
+}
+#burst .burst-panel {
+  font-size: 13px!important;
+  color: #383d41;
+  background-color: #F2F2F2;
+  border: 1px solid #d6d8db;
+  padding: 10px 15px;
+  border-radius: 0px;
+  margin: 0px 0;
+}
+#burst .burst-panel .burst-panel-title {
+  cursor: pointer;
+}
+#burst .burst-panel .burst-field > div {
+  margin: 10px 0;
+}
+#burst .burst-panel .burst-panel-content {
+  display: none;
+  background-color: #fff;
+  border: 1px solid #d6d8db;
+  border-top: 0;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  padding: 10px 15px;
+}
+#burst .burst-panel h1 {
+  font-size: 22px;
+}
+#burst .burst-panel p {
+  font-size: 13px!important;
+}
+#burst .burst-panel.burst-notice {
+  background-color: #fff;
+  border-color: #fff;
+  border: 0;
+  border-left: 4px solid #29b6f6;
+  color: black;
+  margin: 10px 0px 10px 0px;
+  padding-left: 15px;
+}
+#burst .burst-panel.burst-success {
+  background-color: #61ce70;
+  border-color: #61ce70;
+  color: #fff;
+}
+#burst .burst-panel.burst-warning {
+  color: #333333;
+  background-color: #fbc43d;
+  border-color: #fbc43d;
+  margin: 10px 0px 10px 0px;
+}
+#burst .burst-panel ul {
+  list-style-type: disc;
+  margin-left: 22px;
+}
+#burst .burst-bullet {
+  height: 15px;
+  width: 15px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+#burst .burst-tips-tricks .item-content > div,
+#burst .upsell-grid-container .item-content > div {
+  display: flex !important;
+  flex-direction: column;
+  flex-wrap: wrap;
+  height: 100px;
+  margin-bottom: 10px;
+  border-bottom: 1px solid #DEDEDE;
+}
+@media screen and (max-width: 480px) {
+  #burst .burst-tips-tricks .item-content > div,
+  #burst .upsell-grid-container .item-content > div {
+    flex-direction: row;
+    overflow: hidden;
+  }
+}
+#burst .burst-tips-tricks .item-content > div .burst-tips-tricks-element,
+#burst .upsell-grid-container .item-content > div .burst-tips-tricks-element,
+#burst .burst-tips-tricks .item-content > div .plugin-text,
+#burst .upsell-grid-container .item-content > div .plugin-text {
+  color: #3c3c3c;
+}
+#burst .burst-tips-tricks .item-content > div .burst-tips-tricks-element a,
+#burst .upsell-grid-container .item-content > div .burst-tips-tricks-element a,
+#burst .burst-tips-tricks .item-content > div .plugin-text a,
+#burst .upsell-grid-container .item-content > div .plugin-text a {
+  text-decoration: none;
+  color: #3c3c3c;
+}
+#burst .burst-tips-tricks .item-content > div .burst-tips-tricks-element a:hover,
+#burst .upsell-grid-container .item-content > div .burst-tips-tricks-element a:hover,
+#burst .burst-tips-tricks .item-content > div .plugin-text a:hover,
+#burst .upsell-grid-container .item-content > div .plugin-text a:hover {
+  color: #22932e;
+}
+#burst .burst-tips-tricks .item-content > div .burst-tips-tricks-element .burst-bullet,
+#burst .upsell-grid-container .item-content > div .burst-tips-tricks-element .burst-bullet,
+#burst .burst-tips-tricks .item-content > div .plugin-text .burst-bullet,
+#burst .upsell-grid-container .item-content > div .plugin-text .burst-bullet {
+  margin: 7px;
+  background-color: #ededed;
+  float: left;
+}
+#burst .burst-tips-tricks .item-content > div .burst-tips-tricks-element .burst-bullet:hover,
+#burst .upsell-grid-container .item-content > div .burst-tips-tricks-element .burst-bullet:hover,
+#burst .burst-tips-tricks .item-content > div .plugin-text .burst-bullet:hover,
+#burst .upsell-grid-container .item-content > div .plugin-text .burst-bullet:hover {
+  background-color: #22932e;
+}
+#burst .burst-tips-tricks .item-content > div .burst-tips-tricks-element .burst-tips-tricks-content,
+#burst .upsell-grid-container .item-content > div .burst-tips-tricks-element .burst-tips-tricks-content,
+#burst .burst-tips-tricks .item-content > div .plugin-text .burst-tips-tricks-content,
+#burst .upsell-grid-container .item-content > div .plugin-text .burst-tips-tricks-content {
+  margin: 7px 0;
+  float: left;
+}
+#burst .burst-tips-tricks-container-title {
+  border-bottom: 1px solid #DEDEDE;
+}
+#burst .burst-tooltip-right,
+#burst .burst-tooltip-bottom {
+  font-weight: normal;
+}
+#burst .burst-tooltip-right {
+  float: right;
 }
