--- a/assets/css/admin.less
+++ b/assets/css/admin.less
@@ -29,7 +29,7 @@
 			
 	}
 	#burst-content-area {
-		margin: @default-margin;
+		margin: @small-margin;
   	}
   	h3{
   		margin-top: @big-margin;
@@ -337,5 +337,9 @@
 	.burst-tooltip-right {
 		float: right;
 	}
-
+}
+.toplevel_page_burst, .burst-1_page_burst-ab-tests, .burst-1_page_burst-settings{
+	#wpbody-content{
+		padding-bottom: 20px;
+	}
 }
