--- a/grid/css/muuri.less
+++ b/grid/css/muuri.less
@@ -5,123 +5,101 @@
 @grey-light:#cecece;
 @box_shadow_color: #dedede;
 
-
-// .burst-grid {
-//   position: relative;
-//     .burst-grid {
-//         width: calc(@gridblock_width - 20px); 
-//         padding: 10px;
-//         &.small {
-//             width: calc(@gridblock_width_small - 20px); 
-//         }
-//         .muuri-item {
-//           display: block;
-//           position: absolute;
-//           // width: 100px;
-//           // height: 100px;
-//           margin: 5px;
-//           z-index: 1;
-//           background: #fff;
-//         }
-//         .muuri-item.muuri-item-dragging {
-//           z-index: 3;
-//         }
-//         .muuri-item.muuri-item-releasing {
-//           z-index: 2;
-//         }
-//         .muuri-item.muuri-item-hidden {
-//           z-index: 0;
-//         }
-
-//         .burst-grid-header {
-//             border-bottom: 1px solid @grey-light;
-//             padding: 0;
-//             height: 60px;
-
-//             .burst-grid-header-container {
-//                 margin: 0 20px;
-//                 height: 100%;
-//             }
-//             .burst-grid-title{
-//                 cursor: pointer;
-//                 font-size: 20px;
-//                 padding: 20px 0;
-//                 font-weight: bold;
-//                 float: left;
-//             }
-//             .burst-grid-controls {
-//                 float: right;
-//                 margin-top: 20px;
-//                 color: #cecece;
-//             }
-//         }
-
-//         .item-container {
-//             background-color: #fff;
-//             position: relative;
-//             box-shadow: 1px 1px @box_shadow_color;
-            
-//             .item-content {
-//                 position: relative;
-//                 width: 100%;
-//                 height: 100%;
-//                 clear:both;
-//                 margin:15px;
-//                 height: calc(100% - 100px);
-//                 padding-top: 0px;
-//                 padding-bottom:10px;
-//             }
-//         }
-
-        
-//         &.half-height {
-//             .item-container {
-//                 //min-height: @gridblock_height / 2;
-//             }
-//         }
-//         &.small {
-//             .item-container {
-//                 //min-width: @gridblock_width_small - 2* @grid_margin;
-//             }
-//         }
-//         &.no-border {
-//             .item-container {
-//                 border: none;
-//             }
-//         }
-//         &.no-background {
-//             .item-container {
-//                 background-color: #F1F1F1;
-//             }
-//         }
-
-//         &.muuri-item-placeholder .item-container {
-//             border-style: dashed;
-//             padding:0;
-//         }
-//     }
-        
-//     .upsell-grid-container {
-//         .item-container {
-//                 box-shadow: none;
-//         }
-//     }
-// }
+// break points
+@break-xs: 400px;
+@break-s: 600px;
+@break-m: 768px;
+@break-l: 992px;
+@break-xl: 1382px;
 
 
 
 .burst-grid {
     position: relative;
     .burst-grid {
-        width: calc(@gridblock_width - 20px); 
+        width: calc(100% - 20px); 
         padding: 10px;
         position: absolute;
         height: @gridblock_height;
         min-height: 500px;
         z-index: 1;
+        @media only screen and (min-width: @break-xs) {
+            width: calc(100% - 20px); 
+        }
+
+        @media only screen and (min-width: @break-s) {
+            width: calc(100% - 20px); 
+        }
+
+        @media only screen and (min-width: @break-m) {
+            width: calc(100% - 20px); 
+        }
+
+        @media only screen and (min-width: @break-l) {
+            width: calc(100% - 20px); 
+        }
+
+        @media only screen and (min-width: @break-xl) {
+            width: calc(50% - 20px); 
+        }
+
 
         &.small {
-            width: calc(@gridblock_width_small - 20px);
+            width: calc(100% - 20px);
+
+            @media only screen and (min-width: @break-xs) {
+                width: calc(100% - 20px); 
+            }
+
+            @media only screen and (min-width: @break-s) {
+                width: calc(100% - 20px); 
+            }
+
+            @media only screen and (min-width: @break-m) {
+                width: calc(50% - 20px); 
+            }
+
+            @media only screen and (min-width: @break-l) {
+                width: calc(50% - 20px); 
+            }
+
+            @media only screen and (min-width: @break-xl) {
+                width: calc(25% - 20px); 
+            }
+
+        }
+
+        &.half-height {
+                min-height: 250px;
+                 @media only screen and (min-width: @break-xs) {
+                    height: @gridblock_height / 2;
+                    min-height: 250px;
+                }
+
+                @media only screen and (min-width: @break-s) {
+                    min-height: 250px;
+                    height: @gridblock_height / 2;
+                }
+
+                @media only screen and (min-width: @break-m) {
+                    min-height: 250px;
+                    height: @gridblock_height / 2;
+                }
+
+                @media only screen and (min-width: @break-l) {
+                    min-height: 250px;
+                    height: @gridblock_height / 2;
+                }
+
+                @media only screen and (min-width: @break-xl) {
+                    min-height: 250px;
+                    height: @gridblock_height / 2;
+                }
+
+            .item-container {
+                
+                min-height: 250px;
+            }
         }
 
         &.muuri-item-hidden {
@@ -171,19 +149,7 @@
             }
 
         }
-        &.half-height {
-                height: @gridblock_height / 2;
-                min-height: 250px;
-            .item-container {
-                height: @gridblock_height / 2;
-                min-height: 250px;
-            }
-        }
-        &.small {
-            .item-container {
-                min-width: @gridblock_width_small - 2* @grid_margin;
-            }
-        }
+        
         &.no-border {
             .item-container {
                 border: none;
