--- a/assets/css/admin.less
+++ b/assets/css/admin.less
@@ -55,6 +55,13 @@
   		&.first .burst-label{
   			padding-top: 0;
   		}
+  		.weightslider{
+  			width: 100%;
+  			input{
+  				width: 100%;
+  				max-width: 400px;
+  			}
+  		}
   	}
 
   	/* tooltip styles */  	
