--- a/assets/css/metabox.less
+++ b/assets/css/metabox.less
@@ -2,4 +2,15 @@
 	input{
 		width: 100%;
 	}
+	.burst-label{
+		font-size: 13px;
+	    line-height: 1.5;
+	    margin: 1em 0;
+	    margin-bottom: 0.5em;
+		label {
+		    vertical-align: baseline;
+		    font-weight: 600;
+		}
+	}
+	
 }
