--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -1,3 +1,6 @@
+.burst-noticed-hook-element {
+  display: none;
+}
 #burst {
   margin: 0 0 0 -20px;
   font-size: 14px;
@@ -21,11 +24,21 @@
   /*Tooltips on dashboard/settings page*/
 }
 #burst #burst-header {
+  display: flex;
+  justify-content: space-between;
   padding: 20px;
   background-color: #fff;
 }
 #burst #burst-header img {
+  margin-left: 15px;
   width: 120px;
+}
+#burst #burst-header .burst-header-right {
+  display: flex;
+  align-items: center;
+}
+#burst #burst-header .burst-header-right a {
+  margin-right: 15px;
 }
 #burst #burst-content-area {
   margin: 10px;
