Better CSS management and better metaboxes

--- a/assets/css/admin-bar.less
+++ b/assets/css/admin-bar.less
@@ -1,3 +1,4 @@
+@import 'variables.less';
 #wp-admin-bar-burst a.ab-item{
 	display: flex;
 	align-items: center;
@@ -15,21 +16,21 @@
 
 
 .rsssl-yellow {
-	background-color: #EFBF4B;
+	background-color: @rsp-yellow;
 }
 
 .cmplz-blue  {
-	background-color: #27ADEA;
+	background-color: @rsp-blue;
 }
 
 .zip-pink {
-	background-color: #E366A1;
+	background-color: @rsp-pink;
 }
 
 .burst-green {
-	background-color: #22932e;
+	background-color: @rsp-green;
 }
 
 .grey {
-	background-color: #ededed;
+	background-color: @grey;
 }
