--- a/assets/css/admin-bar.css
+++ b/assets/css/admin-bar.css
@@ -11,17 +11,17 @@
   display: block;
 }
 .rsssl-yellow {
-  background-color: #EFBF4B;
+  background-color: #f4bf3e;
 }
 .cmplz-blue {
-  background-color: #27ADEA;
+  background-color: #29b6f6;
 }
 .zip-pink {
-  background-color: #E366A1;
+  background-color: #E35899;
 }
 .burst-green {
   background-color: #22932e;
 }
 .grey {
-  background-color: #ededed;
+  background-color: #c6c6c6;
 }
