--- a/assets/css/admin.less
+++ b/assets/css/admin.less
@@ -1,21 +1,4 @@
-@small-margin: 10px;
-@default-margin: 15px;
-@default-padding: 20px;
-@big-margin: 30px;
-@brand-primary: #22932e;
-@brand-secondary: #61ce70;
-@border-radius: 25px;
-@input-background-color: #F1F1F1;
-@input-border-color: #dadada;
-@gray: #c6c6c6;
-@default-font-size: 14px;
-
-@color-blue: #29b6f6;
-@color-success: #61ce70;
-@color-error: @brand-primary;
-@light-text-color: #3c3c3c;
-@border-color: #DEDEDE;
-@grey-light: #ededed;
+@import 'variables.less';
 
 //wordpress inserts notices after the first h1 or h2. To prevent breaking layout we insert an empty h1 tag at the start of our page, where WP can insert the notice.
 .burst-noticed-hook-element {
@@ -349,6 +332,38 @@
 	width: 15px;
 	border-radius: 50%;
 	margin-right: 10px;
+}
+.burst-experiment-dot:before{
+	content: ' ';
+	height: 15px;
+	width: 15px;
+	background-color: @grey;
+	border-radius: 50%;
+	display: inline-block;
+	vertical-align: text-bottom;
+	margin-right: 5px;
+	text-align: center;
+    color: #fff;
+    line-height: 1.4;
+    font-size: 10px;
+}
+.burst-experiment-dot.control:before{
+	background-color: @rsp-blue;
+	content: 'A';
+}
+.burst-experiment-dot.variant:before{
+	background-color: @rsp-yellow;
+    content: 'B';
+}
+.burst-info-box{
+	padding: 10px;
+    border-radius: 5px;
+    background: #f1f1f1;
+}
+.burst-accompanied-text{
+	color: @grey-dark;
+	font-size: 12px;
+	//font-weight: 300;
 }
 
 .toplevel_page_burst, .burst-1_page_burst-experiments, .burst-1_page_burst-settings{
