--- a/assets/css/metabox.less
+++ b/assets/css/metabox.less
@@ -21,16 +21,26 @@
 		margin-top: 4px;
 	}
 	.burst-experiment-settings-info{
-		padding: 10px;
-		border-radius: 5px;
-		background-color: @grey-light;
+		//padding: 10px;
+		//border-radius: 5px;
+
 		p{
-			margin: 4px 0;
+			display: flex;
+			margin: 6px 0;
 			font-weight: 400;
 			font-size: 12px;
+			padding: 5px 7px;
+			border-radius: 5px;
+			&.control{
+				background-color: lighten(@rsp-blue, 70%, relative);
+			}
+			&.variant{
+				background-color: lighten(@rsp-yellow, 63%, relative);
+			}
 		}
 		h4{
-			margin: 0 0 10px 0;
+			font-size: 13px;
+			margin: 15px 0 6px 0;
 		}
 		& > :last-child{
 			margin-bottom: 0;
