--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -305,7 +305,9 @@
 .burst-info-box {
   padding: 10px;
   border-radius: 5px;
-  background: #f1f1f1;
+  background: #ededed;
+  font-size: 12px;
+  font-style: italic;
 }
 .burst-accompanied-text {
   color: #737373;
