--- a/assets/css/admin.less
+++ b/assets/css/admin.less
@@ -358,7 +358,9 @@
 .burst-info-box{
 	padding: 10px;
     border-radius: 5px;
-    background: #f1f1f1;
+    background: @grey-light;
+    font-size: 12px;
+    font-style: italic;
 }
 .burst-accompanied-text{
 	color: @grey-dark;
