--- a/assets/css/metabox.css
+++ b/assets/css/metabox.css
@@ -20,18 +20,23 @@
 #burst-metabox-experiment-settings p.control {
   margin-top: 4px;
 }
-#burst-metabox-experiment-settings .burst-experiment-settings-info {
-  padding: 10px;
-  border-radius: 5px;
-  background-color: #ededed;
-}
 #burst-metabox-experiment-settings .burst-experiment-settings-info p {
-  margin: 4px 0;
+  display: flex;
+  margin: 6px 0;
   font-weight: 400;
   font-size: 12px;
+  padding: 5px 7px;
+  border-radius: 5px;
+}
+#burst-metabox-experiment-settings .burst-experiment-settings-info p.control {
+  background-color: #eaf8fe;
+}
+#burst-metabox-experiment-settings .burst-experiment-settings-info p.variant {
+  background-color: #fefbf4;
 }
 #burst-metabox-experiment-settings .burst-experiment-settings-info h4 {
-  margin: 0 0 10px 0;
+  font-size: 13px;
+  margin: 15px 0 6px 0;
 }
 #burst-metabox-experiment-settings .burst-experiment-settings-info > :last-child {
   margin-bottom: 0;
