--- a/assets/css/metabox.css
+++ b/assets/css/metabox.css
@@ -20,7 +20,7 @@
 #burst-metabox-experiment-settings p.control {
   margin-top: 4px;
 }
-#burst-metabox-experiment-settings .burst-experiment-settings-info p {
+#burst-metabox-experiment-settings .burst-experiment-settings-info a {
   display: flex;
   margin: 6px 0;
   font-weight: 400;
@@ -28,10 +28,10 @@
   padding: 5px 7px;
   border-radius: 5px;
 }
-#burst-metabox-experiment-settings .burst-experiment-settings-info p.control {
+#burst-metabox-experiment-settings .burst-experiment-settings-info a.control {
   background-color: #eaf8fe;
 }
-#burst-metabox-experiment-settings .burst-experiment-settings-info p.variant {
+#burst-metabox-experiment-settings .burst-experiment-settings-info a.variant {
   background-color: #fefbf4;
 }
 #burst-metabox-experiment-settings .burst-experiment-settings-info h4 {
@@ -41,4 +41,3 @@
 #burst-metabox-experiment-settings .burst-experiment-settings-info > :last-child {
   margin-bottom: 0;
 }
-/*# sourceMappingURL=metabox.css.map */
