--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -289,10 +289,17 @@
   display: inline-block;
   vertical-align: text-bottom;
   margin-right: 5px;
+  margin-top: 2px;
   text-align: center;
   color: #fff;
   line-height: 1.4;
   font-size: 10px;
+}
+.burst-experiment-dot.dot-large:before {
+  height: 23px;
+  width: 23px;
+  line-height: 1.6;
+  font-size: 14px;
 }
 .burst-experiment-dot.control:before {
   background-color: #29b6f6;
@@ -313,9 +320,25 @@
   color: #737373;
   font-size: 12px;
 }
+.burst-experiment-info-below-title {
+  padding: 10px 14px;
+  display: inline-flex;
+  align-items: center;
+  font-size: 15px;
+  font-weight: 500;
+  min-width: 150px;
+  margin: 4px 0;
+  padding: 5px 7px;
+  border-radius: 5px;
+}
+.burst-experiment-info-below-title.control {
+  background-color: #eaf8fe;
+}
+.burst-experiment-info-below-title.variant {
+  background-color: #fefbf4;
+}
 .toplevel_page_burst #wpbody-content,
 .burst-1_page_burst-experiments #wpbody-content,
 .burst-1_page_burst-settings #wpbody-content {
   padding-bottom: 20px;
 }
-/*# sourceMappingURL=admin.css.map */
