--- a/assets/css/admin.less
+++ b/assets/css/admin.less
@@ -342,11 +342,19 @@
 	display: inline-block;
 	vertical-align: text-bottom;
 	margin-right: 5px;
+	margin-top: 2px;
 	text-align: center;
     color: #fff;
     line-height: 1.4;
     font-size: 10px;
 }
+.burst-experiment-dot.dot-large:before{
+	height: 23px;
+	width: 23px;
+    line-height: 1.6;
+    font-size: 14px;
+}
+
 .burst-experiment-dot.control:before{
 	background-color: @rsp-blue;
 	content: 'A';
@@ -355,6 +363,7 @@
 	background-color: @rsp-yellow;
     content: 'B';
 }
+
 .burst-info-box{
 	padding: 10px;
     border-radius: 5px;
@@ -366,6 +375,24 @@
 	color: @grey-dark;
 	font-size: 12px;
 	//font-weight: 300;
+}
+.burst-experiment-info-below-title{
+	padding: 10px 14px;
+	display: inline-flex;
+	align-items: center;
+	font-size: 15px;
+	font-weight: 500;
+	min-width: 150px;
+	margin: 4px 0;
+	padding: 5px 7px;
+	border-radius: 5px;
+	
+	&.control{
+		background-color: lighten(@rsp-blue, 70%, relative);
+	}
+	&.variant{
+		background-color: lighten(@rsp-yellow, 63%, relative);
+	}
 }
 
 .toplevel_page_burst, .burst-1_page_burst-experiments, .burst-1_page_burst-settings{
