--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -282,8 +282,8 @@
 }
 .burst-experiment-dot:before {
   content: ' ';
-  height: 15px;
-  width: 15px;
+  height: 17px;
+  width: 17px;
   background-color: #c6c6c6;
   border-radius: 50%;
   display: inline-block;
@@ -292,8 +292,8 @@
   margin-top: 2px;
   text-align: center;
   color: #fff;
-  line-height: 1.4;
-  font-size: 10px;
+  line-height: 1.45;
+  font-size: 12px;
 }
 .burst-experiment-dot.dot-large:before {
   height: 23px;
@@ -326,16 +326,18 @@
   align-items: center;
   font-size: 15px;
   font-weight: 500;
-  min-width: 150px;
   margin: 4px 0;
-  padding: 5px 7px;
+  padding: 5px 10px;
   border-radius: 5px;
+  color: #333;
 }
 .burst-experiment-info-below-title.control {
   background-color: #eaf8fe;
+  border: 1px solid #29b6f6;
 }
 .burst-experiment-info-below-title.variant {
   background-color: #fefbf4;
+  border: 1px solid #f4bf3e;
 }
 .toplevel_page_burst #wpbody-content,
 .burst-1_page_burst-experiments #wpbody-content,
