--- a/assets/css/metabox.css
+++ b/assets/css/metabox.css
@@ -20,21 +20,26 @@
 #burst-metabox-experiment-settings .burst-experiment-settings-info .burst-experiment-settings-info_container {
   display: flex;
   margin: 6px 0;
-  font-weight: 400;
   font-size: 12px;
   padding: 5px 7px;
   border-radius: 5px;
 }
 #burst-metabox-experiment-settings .burst-experiment-settings-info .burst-experiment-settings-info_container.control {
   background-color: #eaf8fe;
+  border: 1px solid #29b6f6;
 }
 #burst-metabox-experiment-settings .burst-experiment-settings-info .burst-experiment-settings-info_container.variant {
   background-color: #fefbf4;
+  border: 1px solid #f4bf3e;
 }
 #burst-metabox-experiment-settings .burst-experiment-settings-info .burst-experiment-settings-info_container a,
 #burst-metabox-experiment-settings .burst-experiment-settings-info .burst-experiment-settings-info_container p {
   width: 100%;
   margin: 0;
+}
+#burst-metabox-experiment-settings .burst-experiment-settings-info .burst-experiment-settings-info_container p {
+  font-weight: 500;
+  font-size: 14px;
 }
 #burst-metabox-experiment-settings .burst-experiment-settings-info h4 {
   font-size: 13px;
