--- a/assets/css/metabox.less
+++ b/assets/css/metabox.less
@@ -24,20 +24,25 @@
 		.burst-experiment-settings-info_container{
 			display: flex;
 			margin: 6px 0;
-			font-weight: 400;
 			font-size: 12px;
 			padding: 5px 7px;
 			border-radius: 5px;
 			//flex-wrap: wrap;
 			&.control{
 				background-color: lighten(@rsp-blue, 70%, relative);
+				border: 1px solid @rsp-blue;
 			}
 			&.variant{
 				background-color: lighten(@rsp-yellow, 63%, relative);
+				border: 1px solid @rsp-yellow;
 			}
 			a, p{
 				width: 100%;
 				margin: 0;
+			}
+			p{
+				font-weight: 500;
+				font-size: 14px;
 			}
 		}
 		
