--- a/assets/css/admin.less
+++ b/assets/css/admin.less
@@ -4,6 +4,19 @@
 .burst-noticed-hook-element {
   display:none;
 }
+.burst-date-container {
+	background: #fff;
+	cursor: pointer;
+	padding: 4px 10px;
+	border: 1px solid #ccc;
+	border-radius:3px;
+	white-space: nowrap;
+	@media screen and (max-width: 480px) {
+		width: 18px;
+		overflow: hidden;
+	}
+	color:#333;
+}
 
 #burst {
 	margin:0 0 0 -20px;
@@ -23,8 +36,8 @@
 		.burst-header-right {
 			display: flex;
 			align-items: center;
-			a {
-				margin-right: @default-margin;
+			a, button {
+				margin-left: @default-margin;
 			}
 		}
 	}
