review notice completed/acive

--- a/assets/css/metabox.css
+++ b/assets/css/metabox.css
@@ -48,3 +48,4 @@
 #burst-metabox-experiment-settings .burst-experiment-settings-info > :last-child {
   margin-bottom: 0;
 }
+/*# sourceMappingURL=metabox.css.map */
