Show all experiments with burst_get_experiments

--- a/assets/css/admin.less
+++ b/assets/css/admin.less
@@ -345,6 +345,26 @@
 	width: 15px;
 	border-radius: 50%;
 	margin-right: 10px;
+	display: inline-block;
+}
+.rsssl-yellow {
+	background-color: @rsp-yellow;
+}
+
+.cmplz-blue  {
+	background-color: @rsp-blue;
+}
+
+.zip-pink {
+	background-color: @rsp-pink;
+}
+
+.burst-green {
+	background-color: @rsp-green;
+}
+
+.grey {
+	background-color: @grey;
 }
 .burst-experiment-dot:before{
 	content: ' ';
