--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -295,6 +295,22 @@
   width: 15px;
   border-radius: 50%;
   margin-right: 10px;
+  display: inline-block;
+}
+.rsssl-yellow {
+  background-color: #f4bf3e;
+}
+.cmplz-blue {
+  background-color: #29b6f6;
+}
+.zip-pink {
+  background-color: #E35899;
+}
+.burst-green {
+  background-color: #22932e;
+}
+.grey {
+  background-color: #c6c6c6;
 }
 .burst-experiment-dot:before {
   content: ' ';
