Added styling to experiment overview

--- a/assets/css/admin-bar.less
+++ b/assets/css/admin-bar.less
@@ -15,19 +15,19 @@
 }
 
 
-.rsssl-yellow {
+.rsp-yellow {
 	background-color: @rsp-yellow;
 }
 
-.cmplz-blue  {
+.rsp-blue  {
 	background-color: @rsp-blue;
 }
 
-.zip-pink {
+.rsp-pink {
 	background-color: @rsp-pink;
 }
 
-.burst-green {
+.rsp-green {
 	background-color: @rsp-green;
 }
 
