--- a/assets/css/admin-bar.css
+++ b/assets/css/admin-bar.css
@@ -10,19 +10,18 @@
   margin-right: 10px;
   display: block;
 }
-.rsssl-yellow {
+.rsp-yellow {
   background-color: #f4bf3e;
 }
-.cmplz-blue {
+.rsp-blue {
   background-color: #29b6f6;
 }
-.zip-pink {
+.rsp-pink {
   background-color: #E35899;
 }
-.burst-green {
+.rsp-green {
   background-color: #22932e;
 }
 .grey {
   background-color: #c6c6c6;
 }
-/*# sourceMappingURL=admin-bar.css.map */
