--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -37,6 +37,9 @@
     Tips and Tricks
    */
   /*Tooltips on dashboard/settings page*/
+  /*
+	  Progress bar
+	 */
 }
 #burst #burst-header {
   display: flex;
@@ -289,6 +292,26 @@
 }
 #burst .burst-tooltip-right {
   float: right;
+}
+#burst .burst-statistics-container {
+  height: 360px;
+}
+#burst .burst-grid button {
+  margin-top: 15px;
+}
+#burst .burst-progress-bar-container {
+  padding-top: 15px;
+  margin: 0 auto;
+}
+#burst .burst-progress-bar-container .burst-progress {
+  overflow: hidden;
+  height: 20px;
+  border-radius: 5px;
+  background-color: #f7f7f7;
+}
+#burst .burst-progress-bar-container .burst-progress .burst-percentage {
+  height: 100%;
+  background-color: #22932e;
 }
 .burst-bullet {
   height: 15px;
