--- a/assets/css/admin.less
+++ b/assets/css/admin.less
@@ -368,6 +368,19 @@
 		}
 	}
 
+	.burst-percentage-text-container {
+		display:flex;
+		padding-top:20px;
+		.burst-percentage-number {
+			font-size:18px;
+			font-weight:400;
+			margin-right:3px;
+		}
+		.burst-percentage-text {
+
+		}
+	}
+
 
 }
 
