--- a/assets/css/variables.less
+++ b/assets/css/variables.less
@@ -1,6 +1,7 @@
 // Margins, Paddings and Border Radius
 @small-margin: 10px;
 @default-margin: 15px;
+@small-padding: 10px;
 @default-padding: 20px;
 @big-margin: 30px;
 
