--- a/assets/css/admin.less
+++ b/assets/css/admin.less
@@ -359,7 +359,7 @@
 	.burst-row {
 		display:flex;
 		flex-wrap:wrap;
-		padding:@small-padding @default-padding;
+		padding:@small-padding @small-padding;
 		div + div {
 			padding-left:@default-padding;
 		}
