--- a/shepherd/css/tour.less
+++ b/shepherd/css/tour.less
@@ -1,6 +1,4 @@
-/**css hooks
-
- */
+@import '../../assets/css/variables.less';
 
 .burst-tour-hook{
 float:left;
@@ -20,7 +18,7 @@ float:left;
   z-index:2;
 
   &.shepherd-theme-arrows.shepherd-has-title .shepherd-content header {
-	background-color: #29b6f6;
+	background-color: @brand-primary;
 	display: inline-block;
 	width: 100%;
 	height: 45px;
@@ -43,7 +41,7 @@ float:left;
   width: 450px;
 }
 
-burst-tour-logo {
+.burst-tour-logo {
   height: 70px;
   //margin-left: 25px;
 }
