--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -91,14 +91,14 @@
   width: 100%;
   max-width: 400px;
 }
-.burst-tooltip {
+#burst .burst-tooltip {
   font-weight: 400;
   font-size: 13px;
   position: relative;
   /* making the .tooltip span a container for the tooltip text */
   margin-left: 5px;
 }
-.burst-tooltip:before {
+#burst .burst-tooltip:before {
   content: attr(data-text);
   /* here's the magic */
   position: absolute;
@@ -119,11 +119,11 @@
   display: none;
   transition: 0.3s opacity;
 }
-.burst-tooltip:hover:before,
-.burst-tooltip:hover:after {
+#burst .burst-tooltip:hover:before,
+#burst .burst-tooltip:hover:after {
   display: flex;
 }
-.burst-tooltip.left:before {
+#burst .burst-tooltip.left:before {
   /* reset defaults */
   left: initial;
   margin: initial;
@@ -131,7 +131,7 @@
   right: 100%;
   margin-right: 15px;
 }
-.burst-tooltip::after {
+#burst .burst-tooltip::after {
   content: "";
   position: absolute;
   /* position tooltip correctly */
@@ -227,59 +227,57 @@
   list-style-type: disc;
   margin-left: 22px;
 }
-#burst .burst-tips-tricks .item-content > div,
-#burst .upsell-grid-container .item-content > div {
+#burst .burst-tips-tricks .item-content,
+#burst .upsell-grid-container .item-content {
   display: flex !important;
   flex-direction: column;
   flex-wrap: wrap;
-  height: 100px;
   margin-bottom: 10px;
-  border-bottom: 1px solid #DEDEDE;
 }
 @media screen and (max-width: 480px) {
-  #burst .burst-tips-tricks .item-content > div,
-  #burst .upsell-grid-container .item-content > div {
+  #burst .burst-tips-tricks .item-content,
+  #burst .upsell-grid-container .item-content {
     flex-direction: row;
     overflow: hidden;
   }
 }
-#burst .burst-tips-tricks .item-content > div .burst-tips-tricks-element,
-#burst .upsell-grid-container .item-content > div .burst-tips-tricks-element,
-#burst .burst-tips-tricks .item-content > div .plugin-text,
-#burst .upsell-grid-container .item-content > div .plugin-text {
+#burst .burst-tips-tricks .item-content .burst-tips-tricks-element,
+#burst .upsell-grid-container .item-content .burst-tips-tricks-element,
+#burst .burst-tips-tricks .item-content .plugin-text,
+#burst .upsell-grid-container .item-content .plugin-text {
   color: #3c3c3c;
 }
-#burst .burst-tips-tricks .item-content > div .burst-tips-tricks-element a,
-#burst .upsell-grid-container .item-content > div .burst-tips-tricks-element a,
-#burst .burst-tips-tricks .item-content > div .plugin-text a,
-#burst .upsell-grid-container .item-content > div .plugin-text a {
+#burst .burst-tips-tricks .item-content .burst-tips-tricks-element a,
+#burst .upsell-grid-container .item-content .burst-tips-tricks-element a,
+#burst .burst-tips-tricks .item-content .plugin-text a,
+#burst .upsell-grid-container .item-content .plugin-text a {
   text-decoration: none;
   color: #3c3c3c;
 }
-#burst .burst-tips-tricks .item-content > div .burst-tips-tricks-element a:hover,
-#burst .upsell-grid-container .item-content > div .burst-tips-tricks-element a:hover,
-#burst .burst-tips-tricks .item-content > div .plugin-text a:hover,
-#burst .upsell-grid-container .item-content > div .plugin-text a:hover {
+#burst .burst-tips-tricks .item-content .burst-tips-tricks-element a:hover,
+#burst .upsell-grid-container .item-content .burst-tips-tricks-element a:hover,
+#burst .burst-tips-tricks .item-content .plugin-text a:hover,
+#burst .upsell-grid-container .item-content .plugin-text a:hover {
   color: #22932e;
 }
-#burst .burst-tips-tricks .item-content > div .burst-tips-tricks-element .burst-bullet,
-#burst .upsell-grid-container .item-content > div .burst-tips-tricks-element .burst-bullet,
-#burst .burst-tips-tricks .item-content > div .plugin-text .burst-bullet,
-#burst .upsell-grid-container .item-content > div .plugin-text .burst-bullet {
+#burst .burst-tips-tricks .item-content .burst-tips-tricks-element .burst-bullet,
+#burst .upsell-grid-container .item-content .burst-tips-tricks-element .burst-bullet,
+#burst .burst-tips-tricks .item-content .plugin-text .burst-bullet,
+#burst .upsell-grid-container .item-content .plugin-text .burst-bullet {
   margin: 7px;
   background-color: #ededed;
   float: left;
 }
-#burst .burst-tips-tricks .item-content > div .burst-tips-tricks-element .burst-bullet:hover,
-#burst .upsell-grid-container .item-content > div .burst-tips-tricks-element .burst-bullet:hover,
-#burst .burst-tips-tricks .item-content > div .plugin-text .burst-bullet:hover,
-#burst .upsell-grid-container .item-content > div .plugin-text .burst-bullet:hover {
+#burst .burst-tips-tricks .item-content .burst-tips-tricks-element .burst-bullet:hover,
+#burst .upsell-grid-container .item-content .burst-tips-tricks-element .burst-bullet:hover,
+#burst .burst-tips-tricks .item-content .plugin-text .burst-bullet:hover,
+#burst .upsell-grid-container .item-content .plugin-text .burst-bullet:hover {
   background-color: #22932e;
 }
-#burst .burst-tips-tricks .item-content > div .burst-tips-tricks-element .burst-tips-tricks-content,
-#burst .upsell-grid-container .item-content > div .burst-tips-tricks-element .burst-tips-tricks-content,
-#burst .burst-tips-tricks .item-content > div .plugin-text .burst-tips-tricks-content,
-#burst .upsell-grid-container .item-content > div .plugin-text .burst-tips-tricks-content {
+#burst .burst-tips-tricks .item-content .burst-tips-tricks-element .burst-tips-tricks-content,
+#burst .upsell-grid-container .item-content .burst-tips-tricks-element .burst-tips-tricks-content,
+#burst .burst-tips-tricks .item-content .plugin-text .burst-tips-tricks-content,
+#burst .upsell-grid-container .item-content .plugin-text .burst-tips-tricks-content {
   margin: 7px 0;
   float: left;
 }
@@ -295,9 +293,6 @@
 }
 #burst .burst-statistics-container {
   height: 360px;
-}
-#burst .burst-grid button {
-  margin-top: 15px;
 }
 #burst .burst-row {
   display: flex;
