--- a/assets/css/variables.less
+++ b/assets/css/variables.less
@@ -1,3 +1,17 @@
+@gridblock_height: 50vh;
+@gridblock_width: 50%;
+@gridblock_width_small: 25%;
+@grid_margin:10px;
+@grey-light:#cecece;
+@box_shadow_color: #dedede;
+
+// break points
+@break-xs: 400px;
+@break-s: 600px;
+@break-m: 768px;
+@break-l: 992px;
+@break-xl: 1382px;
+
 // Margins, Paddings and Border Radius
 @small-margin: 10px;
 @default-margin: 15px;
