--- a/grid/css/muuri.less
+++ b/grid/css/muuri.less
@@ -1,18 +1,4 @@
-@gridblock_height: 50vh;
-@gridblock_width: 50%;
-@gridblock_width_small: 25%;
-@grid_margin:10px;
-@grey-light:#cecece;
-@box_shadow_color: #dedede;
-
-// break points
-@break-xs: 400px;
-@break-s: 600px;
-@break-m: 768px;
-@break-l: 992px;
-@break-xl: 1382px;
-
-
+@import '../../assets/css/variables.less';
 
 .burst-grid {
     position: relative;
@@ -97,7 +83,6 @@
                 }
 
             .item-container {
-                
                 min-height: 250px;
             }
         }
@@ -143,11 +128,18 @@
             .item-content {
                 clear:both;
                 margin:15px;
-                height: calc(100% - 100px);
-                padding-top: 0px;
+                height: calc(100% - 152px);
+                padding-top: 0;
                 padding-bottom:10px;
+                border-bottom: 1px solid @border-color;
             }
+        }
 
+        .item-footer {
+            button {
+                margin-top:0;
+            }
+            padding:7px @default-padding;
         }
         
         &.no-border {
