--- a/assets/css/admin.less
+++ b/assets/css/admin.less
@@ -282,6 +282,9 @@
 
 	}
 
+	.burst-grid.statistics .item-content {
+		border-bottom:0;
+	}
 	/*
     Tips and Tricks
    */
@@ -401,6 +404,12 @@
 				background-color: @color-success;
 			}
 		}
+	}
+
+	.burst-divider {
+		border-bottom: 1px solid @border-color;
+		padding: @small-padding;
+		margin: @small-margin;
 	}
 
 
