--- a/assets/css/variables.less
+++ b/assets/css/variables.less
@@ -2,8 +2,6 @@
 @gridblock_width: 50%;
 @gridblock_width_small: 25%;
 @grid_margin:10px;
-@grey-light:#cecece;
-@box_shadow_color: #dedede;
 
 // break points
 @break-xs: 400px;
@@ -19,7 +17,9 @@
 @default-padding: 20px;
 @big-margin: 30px;
 
-@border-radius: 25px;
+@border-radius: 5px;
+@border: 1px solid #ededed;
+@box-shadow: 1px 1px #dedede;
 
 // RSP Brand Colors
 @rsp-black: #333;
@@ -38,6 +38,7 @@
 @input-background-color: #F1F1F1;
 @input-border-color: #dadada;
 
+@text-color: #3c434a;
 @light-text-color: #3c3c3c;
 @border-color: #DEDEDE;
 
